Add some styles

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <section class="container-fluid">
+    <section class="container-fluid feedback">
         <div>
             <p>Get In Touch</p>
             <p>In order to get in touch use the contact form below:</p>
@@ -72,11 +72,11 @@
             <p><input type="text" class="form-label" placeholder="Name (Required)"></p>
             <p><textarea maxlength="1000" name="area" rows="5" cols="30"
                     placeholder="Write your message here..."></textarea></p>
-            <p><input type="submit" onclick="location.href='index.html'" value="SEND"></p>
+            <p><button type="submit" onclick="location.href='index.html'">SEND</button></p>
         </div>
         <div>
-            <p>Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit
-                amet
+            <p>Quisque Hendrerit:</p>
+            <p>purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sitamet
                 volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae. </p>
             <p>
                 <img src="images/location.png" alt="location">
